# duskterm

./: .gitignore  LICENSE  README.md  components.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
.github/workflows/: publish.yml
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: background.rs  connection_log.rs  fileio.rs  lib.rs  main.rs  remote_monitor.rs  ssh_algorithms.rs  system.rs  terminal_transfer.rs
src-tauri/src/session/: actor.rs  message.rs  mod.rs  state.rs  supervisor.rs
src-tauri/src/sftp/: mod.rs
src-tauri/src/ssh/: auth.rs  channel_state.rs  mod.rs  supervisor.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/tunnel/: mod.rs
src/composables/: useConfirm.js  useFileSelection.js  useInputRouter.js  useMenu.js  usePanelLayout.js  useSftpPager.js  useTerminalConnection.js  useTerminalPanels.js  useTheme.js  useTiledWorkspaceLayout.js  useToast.js  useVirtualList.js
src/stores/: commandKnowledge.js  security.js  sftpTransfers.js  sftpTransfers.test.js  ssh.js
src/styles/: scrollbar.css  theme.css
src/types/: panelLayout.ts  sftp.js
src/utils/: background.js  commandKnowledge.js  desktopPet.js  ipc.js  lightbar.js  mainUi.js  mainUi.test.js  monitor.js  performance.js  preferences.js  sensitiveCommand.js  sessionOverview.js  sftpPanelState.js  sftpPanelState.test.js  splitTree.js  splitTree.test.js  syncInputChannels.js  syncInputModernization.test.js  terminalCommandHistory.js  terminalTheme.js  (+4 more)
(+113 files in other folders)
