[package]
name = "duskterm"
version = "1.0.0"
description = "跨平台SSH/Telnet/Serial终端，基于Tauri和Rust开发，支持SFTP文件传输"
authors = ["xiaosong <yushan00514@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/dusk-song/duskterm.git"
homepage = "https://github.com/dusk-song/duskterm"
keywords = ["ssh", "terminal", "tauri", "sftp", "telnet", "serial"]
categories = ["command-line-utilities", "network-programming"]


[lib]
name = "duskterm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tokio = { version = "1", features = [
  "rt-multi-thread",
  "sync",
  "time",
  "net",
  "io-util",
  "macros",
] }
russh = "0.48"
russh-keys = "0.48"
russh-sftp = "2.1.1"
async-trait = "0.1"
anyhow = "1"
uuid = { version = "1.10.0", features = ["v4"] }
crossbeam-channel = "0.5"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10.3"
base64 = "0.22.1"
sha2 = "0.10.8"
dirs = "6.0.0"
rand = "0.9.2"
tauri-plugin-dialog = "2.6.0"
zeroize = "1.7.0"
ssh-key = "0.6.7"
sysinfo = "0.30.13"
serialport = "4.7.0"

alloc-stdlib = "=0.2.2"
brotli-decompressor = "=5.0.1"

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
strip = true
